single choice - enum support added

--- a/library-preference-screen-choice/src/main/res/values/ids.xml
+++ b/library-preference-screen-choice/src/main/res/values/ids.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <item type="id" name="pref_choice_single" />
+    <item type="id" name="pref_choice_single_enum" />
     <item type="id" name="pref_choice_multi" />
 
 </resources>
