--- a/library-preference-screen-choice/src/main/res/layout/dialog_choice_item.xml
+++ b/library-preference-screen-choice/src/main/res/layout/dialog_choice_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/MD_ListItem.Choice"
+    android:background="?selectableItemBackground"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
@@ -28,7 +29,7 @@
         android:layout_weight="1"
         android:gravity="center_vertical|start"
         android:textAppearance="?android:attr/textAppearanceMedium" />
-
+<!--
     <ImageView
         android:id="@+id/image"
         android:layout_width="32dp"
@@ -37,5 +38,5 @@
         android:paddingStart="4dp"
         android:paddingTop="4dp"
         android:paddingBottom="4dp" />
-
+-->
 </LinearLayout>
