--- a/library-preference-screen-input/src/main/res/values/ids.xml
+++ b/library-preference-screen-input/src/main/res/values/ids.xml
@@ -3,5 +3,8 @@
 
     <item type="id" name="pref_input_string" />
     <item type="id" name="pref_input_int" />
+    <item type="id" name="pref_input_long" />
+    <item type="id" name="pref_input_float" />
+    <item type="id" name="pref_input_double" />
 
 </resources>
