--- a/library-preference-screen/src/main/res/layout/preference_with_widget_small.xml
+++ b/library-preference-screen/src/main/res/layout/preference_with_widget_small.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Taken from by https://github.com/Maxr1998/ModernAndroidPreferences/blob/master/library/src/main/res/layout/map_preference.xml -->
+<?xml version="1.0" encoding="utf-8"?><!-- Taken from by https://github.com/Maxr1998/ModernAndroidPreferences/blob/master/library/src/main/res/layout/map_preference.xml -->
 <com.michaelflisar.materialpreferences.preferencescreen.views.SettingsRootView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -98,6 +97,7 @@
         android:id="@id/widget_frame"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:clipChildren="false"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingStart="16dp"
