switch extended with switchCompact: switch is a M3 switch, switchCompact an M2 styles one

--- a/library-preference-screen/src/main/res/values/ids.xml
+++ b/library-preference-screen/src/main/res/values/ids.xml
@@ -4,6 +4,7 @@
     <item type="id" name="pref_screen" />
     <item type="id" name="pref_category" />
     <item type="id" name="pref_switch" />
+    <item type="id" name="pref_switch_compact" />
     <item type="id" name="pref_checkbox" />
     <item type="id" name="pref_button" />
 
