fix disabled switch

--- a/library-preference-screen-bool/src/main/res/layout/widget_switch.xml
+++ b/library-preference-screen-bool/src/main/res/layout/widget_switch.xml
@@ -5,6 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@null"
+    android:enabled="false"
     android:clickable="false"
     android:focusable="false"
     app:thumbIcon="@drawable/selector_settings_switch" />
